<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/home"
        android:title="Home"
        android:icon="@drawable/ic_home" />
    <item android:id="@+id/games"
        android:title="Games"
        android:icon="@drawable/ic_videogame_asset"/>
    <item android:id="@+id/sessions"
        android:title="Sessions"
        android:icon="@drawable/ic_timer"/>
</menu>