<resources>
    <string name="app_name">BicepGamers</string>
    <string name="chooseAGame">Choose A Game</string>
    <string name="gameName">Input Game Name</string>
    <string name="online">Online</string>
    <string name="chooseADevice">Device</string>
    <string name="chooseAGenre">Genre</string>
    <string name="createAGame">Create Game</string>
    <string name="selectGenre">Select a genre....</string>
    <string name="selectDevice">Select a device</string>
    <string name="addnewgame">Add New Game</string>
    <string name="Games">BicepGamers</string>
    <string name="Timer">BicepGamers-Timer</string>
    <string name="Create">BicepGamers-Create A Game</string>
    <string name="History">Sessions History</string>

    <string-array name="Games">
        <item>League Of Legends</item>
        <item>Minecraft</item>
        <item>Rocket League</item>
    </string-array>

    <string-array name="genre">
        <item>MOBA</item>
        <item>SANDBOX</item>
        <item>REAL-TIME STRATEGY</item>
        <item>SHOOTER</item>
        <item>RPG</item>
        <item>PLATFORMER</item>
        <item>SURVIVAL AND HORROR</item>
        <item>ACTION-ADVENTURE</item>
        <item>PUZZLERS AND PARTY GAMES</item>
    </string-array>

    <string-array name="devices">
        <item>PC</item>
        <item>CONSOLE</item>
        <item>VR</item>
        <item>MOBILE</item>
    </string-array>


</resources>