...
                app:layout_constraintHorizontal_bias="0.909"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.06" />

            <Button
                android:id="@+id/endbreakbutton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:text="End Break"
                android:textColor="#4A148C" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/workoutvideos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
